k8s/23-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omok-server
  namespace: omok
spec:
  selector:
    app: omok-server
  ports:
    - port: 4000
      targetPort: 4000
